src/main.css
/* Colors 

parchment: hsl(40, 50%, 95%);
eggshell: ;
royal blue: hsl(245, 72%, 55%);

*/

html, body {
  font-family: helvetica, arial, sans-serif;
  background: hsl(40, 50%, 95%);
  margin: 0;
  padding: 0;
  overflow: auto;
}


.ca-box-control-panel {
  position: fixed;
  z-index: 50;
  right: 20px;
  bottom: 20px;
}


.ca-app_primaryButton {
  position: relative;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  margin: 0;
  padding: 0;
  border: 0;
}

.ca-app_primaryButton:hover,
.ca-app_primaryButton:focus { 
  box-shadow: 0 0 8px 0 #666;
  outline: 0;
}

.ca-app_primaryButton:active {
  outline: 0;
}

.ca-app_primaryButtonText {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  line-height: 50px;
  color: white;
}

.ca-box-add-btn        { background: hsl(245, 72%, 55%); }
.ca-box-add-btn:active { background: hsl(245, 72%, 65%); }
.ca-box-add-btn > .ca-app_primaryButtonText { font-size: 42px; }

.ca-box-commit-btn        { background: hsl(135, 65%, 55%); }
.ca-box-commit-btn:active { background: hsl(135, 65%, 65%); }
.ca-box-commit-btn > .ca-app_primaryButtonText { font-size: 26px; }



/***************
Text area
***************/

.ca-canvas {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  min-height: 100vh;
}

.ca-canvas__dragging {
  user-select: none;
}

.ca-canvas_box {
  position: absolute;
}

.ca-canvas_boxGrabber {
  position: absolute;
}

.ca-canvas_boxGrabberLabel {
  position: absolute;
  z-index: 2;
  left: -50px;
  top: 13px;
  height: 30px;
  width: 30px;

  border-radius: 50%;
  background: hsl(245, 72%, 55%);
  line-height: 30px;
  text-align: center;
  color: #fff;
  font-size: 16px;

  user-select: none;
  cursor: grab;
}

.ca-canvas_boxGrabber_selected > .ca-canvas_boxGrabberLabel {
  box-shadow: 0px 0px 6px 0px hsl(245, 72%, 55%);
}

.ca-canvas__dragging .ca-canvas_box-grabber {
  cursor: grabbing;
}


.ca-canvas_boxGrabberEditButton,
.ca-canvas_boxGrabberDeleteButton {
  position: absolute;
  z-index: 1;
  left: -47px;
  top: 15px;
  height: 25px;
  width: 25px;

  border-radius: 50%;
  background: hsl(245, 72%, 60%);
  line-height: 25px;
  text-align: center;
  color: #fff;
  font-size: 13px;

  user-select: none;
  cursor: pointer;

  transition: top 0.6s;
}

.ca-canvas:not(.ca-canvas__dragging) .ca-canvas_boxGrabber_selected > .ca-canvas_boxGrabberEditButton {
  top: 50px;
}

.ca-canvas:not(.ca-canvas__dragging) .ca-canvas_boxGrabber_selected > .ca-canvas_boxGrabberDeleteButton {
  top: 82px;
}


/***************
Text area
***************/

.ca-textbox {
  position: relative;
  height: 100%;
  width: 100%;
}

.ca-app_visualDebugMode .ca-textbox {
  box-shadow: 0px 0px 0px 2px hsla(180, 100%, 20%, 50%);
}

.ca-textbox_lines {
  list-style: none;
  margin: 0;
  padding: 0;
}

.ca-textbox_lines_line {
  position: relative;
  box-sizing: border-box;
  white-space: nowrap;
  height: 24px;
  line-height: 24px;
  margin: 0;
  border: 0;
}

.ca-app_visualDebugMode .ca-textbox_lines_line {
  box-shadow: 0px 0px 0px 1px hsla(0, 100%, 20%, 50%);
}

.ca-textbox_textstyle {
  font-family: "Georgia", serif;
  font-size: 16px;
  letter-spacing: normal;
}

.ca-textbox_editable:focus,
.ca-textbox_editable:active {
  outline: 3px solid hsl(40, 50%, 85%);
}


/***************
Edit Overlay
***************/

.ca-editOverlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: hsla(0, 0%, 100%, 20%);
  z-index: 20;

  overflow-y: scroll;
}

.ca-editOverlay_paper {
  background: white;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 800px;
  max-width: calc(100% - 140px);
  margin: 80px auto;
  box-shadow: 0 0 10px 0px hsla(0, 0%, 0%, 20%);

  transform-origin: top center;
  animation-duration: 0.8s;
  animation-name: ca-paperslip;
}

.ca-editOverlay_paper > textarea {
  font-family: "Georgia", serif;
  font-size: 16px;

  border: 0;
  outline: 0;
  min-height: 1000px;
  height: 100%;
  width: 100%;
  padding: 60px;
  box-sizing: border-box;
  resize: none;
  overflow: hidden;
}

.ca-editOverlay_close {
  position: absolute;
  top: 20px;
  right: 15px;
  font-size: 40px;
  border: 0;
  background: none;
  color: hsl(0, 0%, 50%);
  height: 50px;
  width: 50px;
  border-radius: 50%;
  margin: 0;
  padding: 0;
  transition: background 0.3s;
  outline: 0;
}

.ca-editOverlay_close:hover,
.ca-editOverlay_close:active,
.ca-editOverlay_close:focus {
  background: hsl(0, 0%, 90%);
  outline: 0;
}

@keyframes ca-paperslip {
  from {
    opacity: 0;
    transform: perspective(600px) rotateX(-30deg) translate3d(0, 20%, -200px);
  }

  70% {
    opacity: 1;
    transform: perspective(600px) rotateX(0deg) translate3d(0, -10px, 50px);
  }

  to {
    transform: perspective(600px) rotateX(0deg) translate3d(0, 0, 0);
  }
}

